<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="addItemHint">Use #tags to display drop down</string>
    <string name="editNotes">Note</string>
    <string name="editDate">Date</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="main_menu_export">Export</string>
    <string name="cab_delete">Delete</string>
    <string name="cab_share">Share</string>
    
 	<string-array name="sdlc_phases_array">
        <item>Analysis</item>
        <item>Design</item>
        <item>Coding</item>
        <item>Testing</item>
        <item>UAT</item>
        <item>Activations</item>
        <item>Codeprop</item>
        <item>MUT</item>
    </string-array>

</resources>