<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
	<TextView android:text="@string/editNotes"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp" />
	
	<MultiAutoCompleteTextView android:id="@+id/editNotes"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:gravity="top"
		android:layout_weight="1"
		android:layout_marginBottom="10dp"
		android:hint="@string/addItemHint" />
	
	<TextView android:text="@string/editDate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp" />
	
	<EditText android:id="@+id/editDate"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:hint="@string/editDate" />	
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:gravity="center_horizontal" >
		
		<Button android:text="@string/button_save"
			android:onClick="onSaveButtonClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			    
		<Button android:text="@string/button_cancel"
			android:onClick="onCancelButtonClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	
	</LinearLayout>
	
</LinearLayout>